manifests/ingress/backendsecuritypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit
  namespace: mandagsmiddag
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: mandagsmiddag
  rateLimit:
    local:
      rules:
        - limit:
            requests: 120
            unit: Minute
