manifests/ingress/httproute-test.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mandagsmiddag-frontend-test
  namespace: mandagsmiddag
spec:
  parentRefs:
    - name: cloudflared-gateway
      namespace: cloudflared
      group: gateway.networking.k8s.io
      kind: Gateway

  hostnames:
    - test.bakseter.net

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: mandagsmiddag-frontend
          port: 3000
          group: ''
          kind: Service
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mandagsmiddag-backend-test
  namespace: mandagsmiddag
spec:
  parentRefs:
    - name: cloudflared-gateway
      namespace: envoy-gateway
      group: gateway.networking.k8s.io
      kind: Gateway

  hostnames:
    - test.bakseter.net

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api

      backendRefs:
        - name: mandagsmiddag-backend
          port: 8080
          group: ''
          kind: Service
          weight: 1
