manifests/ingress/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mandagsmiddag
  namespace: mandagsmiddag
spec:
  parentRefs:
    - name: cloudflared
      namespace: cloudflared
      group: gateway.networking.k8s.io
      kind: Gateway

  hostnames:
    - mandagsmiddag.no

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: mandagsmiddag-frontend
          port: 3000

    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - group: ''
          kind: Service
          name: mandagsmiddag-backend
          port: 8080
