manifests/ingress/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: authentik-extauth
  namespace: mandagsmiddag
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: mandagsmiddag-frontend-test # TODO: rename
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: mandagsmiddag-backend-test # TODO: rename
  extAuth:
    http:
      url: http://ak-outpost-mandagsmiddag.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - X-authentik-username
        - X-authentik-groups
        - X-authentik-entitlements
        - X-authentik-email
        - X-authentik-name
        - X-authentik-uid
        - X-authentik-jwt
        - X-authentik-meta-jwks
        - X-authentik-meta-outpost
        - X-authentik-meta-provider
        - X-authentik-meta-app
        - X-authentik-meta-version
      headersToExtAuth:
        - Authorization
        - Cookie
        - X-Forwarded-For
        - X-Forwarded-Host
        - X-Forwarded-Proto
